# MultiRob-Coverage

./: .gitignore  AGENTS.md  CoverWorld.py  README.md  actor.py  demo.py  evaluate.py  evaluation_results_20260312_195731.txt  evaluation_results_20260312_195856.txt  evaluation_results_20260312_200019.txt  pyproject.toml  test_env.py  train.py  visualize.py
cover_world/: __init__.py  env.py  grid_graph.py
models/: __init__.py  gnn_actor.py
visualizations/run_20260312_203916/: report.txt
visualizations/run_20260312_203947/: report.txt
